# jumu

./: .gitignore  API_REFERENCE.md  GETTING_STARTED.md  HUMAN_ANALYSIS_OF_PAGE.md  INDEX.md  INSTRUCTIONS.md  MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCRAPER_CORRECTION.md  START_HERE.md  UV_COMPLETE.md  UV_SETUP.md  config.json  data_processor.py  pyproject.toml  quick_test.py  requirements.txt  scraper.py  scraper_selenium.py  test_api.py
.github/: copilot-instructions.md
analysis/: __init__.py  analysis.ipynb  examples.py
analysis/src/: __init__.py  data_processor.py  examples.py
analysis/test/: __init__.py
doc/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_crosscutting_concepts.md  09_design_decisions.md  10_quality_requirements.md  11_technical_risks.md  A1_versioning_system.md  A2_api_reference.md
scraper/: IMPLEMENTATION.md  QUICKREF.md  VERSIONING.md  __init__.py  scraper.py  scraper_async.py  version_manager.py
scraper/src/: __init__.py  examples_versioning.py  scraper.py  scraper_async.py  scraper_versioned.py
