[project]
name = "jugend-musiziert-scraper"
version = "1.0.0"
description = "Web scraper for Jugend musiziert tournament participants using async API and smart versioning"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "web scraping",
    "jugend musiziert",
    "tournament",
    "api",
    "data extraction",
    "async",
    "aiohttp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

dependencies = [
    "aiohttp>=3.9.0",
    "polars>=0.19.0",
    "rich>=13.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
jumu-scraper = "scraper.src.scraper_async:main"
jumu-processor = "analysis.src.data_processor:main"

[project.optional-dependencies]
selenium = [
    "selenium>=4.0.0",
]
scheduler = [
    "APScheduler>=3.10.0",
]
data-science = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/jugend-musiziert-scraper"
Documentation = "https://github.com/yourusername/jugend-musiziert-scraper/blob/main/README.md"
Repository = "https://github.com/yourusername/jugend-musiziert-scraper.git"
Issues = "https://github.com/yourusername/jugend-musiziert-scraper/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
module = "selenium.*"
ignore_missing_imports = true
